UPDATE: Globetrotter updates - Added delete button for bookings of asset. - Campaign booking integration into financial module and payment.

--- a/.env
+++ b/.env
@@ -191,3 +191,7 @@ GOOGLE_MAP_API=https://maps.googleapis.com/maps/api
 
 OAAN_API_URL="http://localhost:8001/operator"
 # OAAN_API_URL="https://oaan.globetrotter.com.ng/operator"
+CORPORATE_USER_TYPE=1
+INDIVIDUAL_USER_TYPE=2
+CAMPAIGN_BOOKING_TYPE=campaign
+SINGLE_BOOKING_TYPE=single
