--- a/.github/workflows/deployment_globetrotter.yml
+++ b/.github/workflows/deployment_globetrotter.yml
@@ -13,15 +13,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Install Node.js and npm
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
+        
     - name: Install cPanel deployment script dependencies
-      run: |
-        npm install -g ftp-deploy
+      run: npm install -g ftp-deploy
 
     - name: Deploy to cPanel
       run: |
         ftp-deploy 
-          --local-dir=GlobeTrotter 
-          --remote-dir=GlobeTrotter 
-          --server=${{ secrets.FTP_SERVER }} 
-          --user=${{ secrets.FTP_USERNAME }}  
-          --password=${{ secrets.FTP_PASSWORD }} 
+          --local-dir GlobeTrotter 
+          --remote-dir GlobeTrotter 
+          --server ${{ secrets.FTP_SERVER }} 
+          --user ${{ secrets.FTP_USERNAME }}  
+          --password ${{ secrets.FTP_PASSWORD }} 
